k8s-files/kubernetes/devops-env/deployment-jenkins.yml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: jenkins
#   labels:
#     app: jenkins
#   namespace: devops-apps
# spec:
#   type: NodePort
#   selector:
#     app: jenkins
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
#       nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops-apps
  labels:
    app: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
# https://stackoverflow.com/questions/56003468/jenkins-deployment-on-kubernetes-has-a-problem-with-logs
apiVersion: apps/v1
kind: Deployment
metadata:
#   annotations:
#     kubernetes.io/change-cause: "New change"
  name: jenkins
  namespace: devops-apps
  labels:
    app: jenkins
spec:
#   revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: jenkins
        image:  jenkins/jenkins:2.263.1-lts
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 512Mi
        ports:
          - containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: jenkins-persistent-storage
            mountPath: /var/jenkins_home
      securityContext:
        fsGroup: 1000 
        runAsUser: 0
      volumes:
        - name: jenkins-persistent-storage
          persistentVolumeClaim:
            claimName: pvc-jenkins
      restartPolicy: Always
