k8s-files/kubernetes/devops-env/deployment-webconsole.yml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: webconsole
#   labels:
#     app: webconsole
#   namespace: devops-apps
# spec:
#   type: NodePort
#   selector:
#     app: webconsole
#   ports:
#     - protocol: TCP
#       port: 8081
#       targetPort: 80
#       nodePort: 30002
---
apiVersion: v1
kind: Service
metadata:
  name: webconsole
  namespace: devops-apps
  labels:
    app: webconsole
spec:
  type: ClusterIP
  selector:
    app: webconsole
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
---
# https://stackoverflow.com/questions/56003468/webconsole-deployment-on-kubernetes-has-a-problem-with-logs
apiVersion: apps/v1
kind: Deployment
metadata:
#   annotations:
#     kubernetes.io/change-cause: "New change"
  name: webconsole
  namespace: devops-apps
  labels:
    app: webconsole
spec:
#   revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: webconsole
  template:
    metadata:
      labels:
        app: webconsole
    spec:
      containers:
      - name: webconsole
        image:  cdue/webconsole:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 512Mi
        ports:
          - containerPort: 80
            protocol: TCP
      restartPolicy: Always
